--- a/kieserver/src/main/resources/application.properties
+++ b/kieserver/src/main/resources/application.properties
@@ -6,8 +6,8 @@ server.port=8090
 cxf.path=/rest
 
 #kie server config
-kieserver.serverId=demo-rules-app-service-dev
-kieserver.serverName=demo-rules-app-service Dev
+kieserver.serverId=demo-kieserver
+kieserver.serverName=demo-kieserver
 kieserver.location=http://localhost:8090/rest/server
 kieserver.controllers=http://localhost:8080/business-central/rest/controller
 kieserver.user=kieserver
